syntax = "proto2";
package protobuf;

message PBREQPayment {
  required string pairhash = 1;
  required string payorhash = 2;
  required int32 payment = 3;
  optional string description = 4;
  optional string createdAt = 5;
  optional string payhash = 6;
}

message PBUserData {
  required string username = 1;
  required string usertoken = 2;
  required string createdAt = 3;
  optional string email = 4;
  optional string icon = 5;
}

message REQlogin {
  required string username = 1;
  required string password = 2;
}

message REQsignup {
  required string username = 1;
  required string password = 2;
  required string email = 3;
}

message REQasignpair {
  required string usertoken = 1;
}

message REQrequestpair {
  repeated string usertokens = 1;
}

message REQnone {
}

message REQpairinfo {
  required string pairhash = 1;
  optional int32 pfrom = 2;
  optional int32 duration = 3;
}

message REQpayinfo {
  required string payhash = 1;
}

message REQuploadpayphoto {
  required string payhash = 1;
  required string data64 = 2;
  required string format = 3;
}

message REQdeletepayphoto {
  required string photopath = 1;
}

